--- a/public/css/style.css
+++ b/public/css/style.css
@@ -260,3 +260,61 @@ justify-content: center;
     margin: 4rem;
     text-align: center;
 }
+
+.search_bar{
+    visibility: hidden;
+    transform: translateX(-100px);
+    background-color: var(--black);
+    padding: 4px 0;
+    position: absolute;
+    left: 0;
+    right: 0;
+}
+
+.search_bar.open{
+    transform: translateX(0);
+    transition: transform 0.1s;
+
+}
+
+.search_bar input{
+    margin: 0;
+    padding: 0;
+}
+
+#searchClose{
+    position: absolute;
+    top: 0;
+    right: 0;
+    color: var(--gray-light);
+    padding: 15px;
+
+}
+
+.admin-title{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.admin-post{
+    padding: 0;
+    margin: 0;
+}
+
+.admin-post-controls form{
+    display: inline-block;
+    background-color: var(--black);
+    color: var(--gray-light);
+    border: 0;
+    text-decoration: none;
+    font-size: 8rem;
+    padding: 4px 8px;
+    line-height: 2;
+}
+
+.admin-post li{
+    display: flex;
+    justify-content: space-between;
+    padding: 10px 0;
+}
