--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -9,6 +9,9 @@
     <script type="text/javascript" defer src="/js/script.js"></script>
 </head>
 <body>
+
+       <%- include("../partials/search.ejs") %>
+
     <div class="container">
      <%- include("../partials/header.ejs") %>
        <main class="main">
