--- a/views/partials/search.ejs
+++ b/views/partials/search.ejs
@@ -1,7 +1,7 @@
 <div class="search_bar">
     <div class="container">
         <form action="/search" class="search_form" role="search" method="post">
-             <input type="search" aria-label="Search" id="search_input" name="search_term" placeholder="Search the site..."/>
+             <input type="search" aria-label="Search" id="search_input" name="search_item" placeholder="Search the site..."/>
 
         </form>
         <div id="searchClose">Close</div> 
