--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -10,7 +10,7 @@
         <div class="admin-post-controls">
             <a href="/edit-post/<%= post._id%>" class="btn">Edit</a>
 
-            <form action="/delete-post/<%=data._id%>?_method=delete" method="post">
+            <form action="/delete-post/<%=post._id%>?_method=delete" method="post">
                 <input type="submit" value="delete" class="btn">
             </form>
         </div>
