--- a/views/partials/header_admin.ejs
+++ b/views/partials/header_admin.ejs
@@ -17,8 +17,8 @@
 
 
     <div class="header__button">
-        <button>
+        <a href="/logout">
             Logout
-        </button>
+        </a>
     </div>
 </header>
