--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -11,7 +11,7 @@
 </form>
 
 
-<!-- <h3>Register</h3>
+<h3>Register</h3>
 
 <form action="/register" method="post">
     <label for="username"><b>Username</b></label>
@@ -21,4 +21,4 @@
     <input type="text" name="password" placeholder="Enter Password">    
 
     <input type="submit" value="Register" class="btn">
-</form> -->
+</form>
