--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -20,5 +20,5 @@
     <label for="password"><b>Password</b></label>
     <input type="text" name="password" placeholder="Enter Password">    
 
-    <input type="submit" value="Register" class="btn">
+    <a><input type="submit" value="Register" class="btn"></a>
 </form>
